<resources>

    <string name="app_name">Wikimedia Commons</string>
    <string name="app_name_beta">Wikimedia Commons Beta</string>
    <string name="menu_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="logging_in_title">Logging in</string>
    <string name="logging_in_message">Please wait...</string>
    <string name="login_success">Login success!</string>
    <string name="login_failed">Login failed!</string>
    <string name="authentication_failed">Authentication failed!</string>
    <string name="uploading_started">Upload started!</string>
   
    <string name="upload_completed_notification_title">%1$s uploaded!</string>
    <string name="upload_completed_notification_text">Tap to view your upload</string>
    <string name="upload_progress_notification_title_start">Starting %1$s upload</string>
    <string name="upload_progress_notification_title_in_progress">%1$s uploading</string>
    <string name="upload_progress_notification_title_finishing">Finishing uploading %1$s</string>
    <string name="upload_failed_notification_title">Uploading %1$s failed</string>
    <string name="upload_failed_notification_subtitle">Tap to view</string>
    <plurals name="uploads_pending_notification_indicator">
        <item quantity="one">1 file uploading</item>
        <item quantity="other">%d files uploading</item>
    </plurals>

    <string name="title_activity_contributions">My uploads</string>
    <string name="contribution_state_queued">Queued</string>
    <string name="contribution_state_failed">Failed</string>
    <string name="contribution_state_in_progress">%1$d%% complete</string>
    <string name="contribution_state_starting">Uploading</string>
    <string name="menu_from_gallery">From Gallery</string>
    <string name="menu_from_camera">Take photo</string>

    <string name="provider_contributions">My uploads</string>
    <string name="menu_share">Share</string>
    <string name="menu_open_in_browser">View in Browser</string>
    <string name="share_title_hint">Title</string>
    <string name="share_description_hint">Description</string>

    <string name="login_failed_network">Unable to login - network failure</string>
    <string name="login_failed_username">Unable to login - please check your username</string>
    <string name="login_failed_password">Unable to login - please check your password</string>
    <string name="login_failed_throttled">Too many unsuccessful attempts. Please try again in a few minutes
    </string>
    <string name="login_failed_blocked">Sorry, this user has been blocked on Commons</string>
    <string name="login_failed_generic">Login failed</string>

    <string name="share_upload_button">Upload</string>
    <string name="multiple_share_base_title">Name this set</string>
    <string name="provider_modifications">Modifications</string>
    <string name="menu_upload_single">Upload</string>
    <string name="categories_search_text_hint">Search categories</string>
    <string name="menu_save_categories">Save</string>

    <plurals name="contributions_subtitle">
        <item quantity="zero">No uploads yet</item>
        <item quantity="one">1 upload</item>
        <item quantity="other">%d uploads</item>
    </plurals>
    <plurals name="starting_multiple_uploads">
        <item quantity="one">Starting 1 upload</item>
        <item quantity="other">Starting %d uploads</item>
    </plurals>
    <plurals name="multiple_uploads_title">
        <item quantity="one">1 upload</item>
        <item quantity="other">%d uploads</item>
    </plurals>

    <string name="categories_not_found">No categories matching %1$s found</string>
    <string name="categories_skip_explanation">Add categories to make your images more discoverable on Wikimedia Commons.\n\nStart typing to add categories.\nTap this message (or hit back) to skip this step.</string>
    <string name="categories_activity_title">Categories</string>
    <string name="preference_tracking">Usage reports</string>
    <string name="preference_tracking_summary">Send usage reports to Wikimedia to help us improve the app</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="about_license">Open Source software released under the &lt;a href="https://github.com/wikimedia/android-commons/blob/master/COPYING">Apache License v2&lt;/a></string>
    <string name="about_improve">Source on &lt;a href="https://github.com/wikimedia/android-commons">GitHub&lt;/a>. Bugs at &lt;a href="https://bugzilla.wikimedia.org/enter_bug.cgi?product=Commons%20App">Bugzilla&lt;/a>.</string>
    <string name="about_privacy_policy">&lt;a href="https://wikimediafoundation.org/wiki/Privacy_policy">Privacy policy&lt;/a></string>
    <string name="title_activity_about">About</string>
    <string name="menu_feedback">Send Feedback (via Email)</string>
    <string name="provider_categories">Recently used categories</string>

    <string name="waiting_first_sync">Waiting for first sync...</string>
    <string name="no_uploads_yet">You have not yet uploaded any photos.</string>

    <string name="menu_retry">Retry</string>
    <string name="menu_abort">Abort</string>

    <string name="share_license_summary">You agree to upload under the terms of the CC-BY-SA 3.0 license.</string>

    <string name="menu_download">Download</string>
    <string name="preference_license">License</string>

    <string name="license_name_cc_by_sa">CC Attribution-ShareAlike</string>
    <string name="license_name_cc_by">CC Attribution</string>
    <string name="license_name_cc0">CC0</string>
</resources>
