<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:compat="http://schemas.android.com/apk/res-auto"
        >
    <item android:id="@+id/menu_from_camera"
          android:title="@string/menu_from_camera"
          android:orderInCategory="100"
          compat:showAsAction="always|withText"
          android:icon="@android:drawable/ic_menu_camera"
            />
    <item android:id="@+id/menu_from_gallery"
        android:title="@string/menu_from_gallery"
        android:orderInCategory="200"
        compat:showAsAction="always|withText"
        android:icon="@android:drawable/ic_menu_gallery"
            />
    <item android:id="@+id/menu_settings"
          android:title="@string/menu_settings"
          compat:showAsAction="never"
          android:icon="@android:drawable/ic_menu_preferences"
          />
    <item android:id="@+id/menu_about"
          android:title="@string/menu_about"
          compat:showAsAction="never"
          android:icon="@android:drawable/ic_menu_info_details"
          />
    <item android:id="@+id/menu_feedback"
          android:title="@string/menu_feedback"
          compat:showAsAction="never"
          android:icon="@android:drawable/ic_menu_send"
            />

</menu>
